fixed bug typing on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -55,7 +55,7 @@
     }
 
     .container_typing {
-        width: 220px;
+        width: 230px;
     }
 
 }
